fix z-index

--- a/src/app/components/igv/igv.component.css
+++ b/src/app/components/igv/igv.component.css
@@ -178,6 +178,7 @@
   .sidebar-sticky-top {
     position: sticky;
     top: 0;
+    z-index: 999;
   }
 }
 
